<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Faurecia BioFit Demo</string>
    <string name="action_settings">Settings</string>
    <string name="statusText">Status: </string>
    <string name="bluetoothText">Bluetooth: </string>
    <string name="bluetoothOnText">On</string>
    <string name="bluetoothOffText">Off</string>
    <string name="bluetoothDiscoverText">Discover</string>
    <string name="bluetoothDiscoverDoneText">Done</string>
    <string name="title_activity_device_info">DeviceInfoActivity</string>

</resources>
