<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyActivity">

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/statusText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/bluetoothLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bluetoothText" />

        <Button
            android:id="@+id/bluetoothOnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetoothOnText" />

        <Button
            android:id="@+id/bluetoothOffButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetoothOffText" />

        <Button
            android:id="@+id/bluetoothDiscoverButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetoothDiscoverText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp" >

        <ListView
            android:id="@+id/scanResultList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

</LinearLayout>
